# linkerd-tcp

./: .gitignore  .rustfmt.toml  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  PROFILING.md  README.md  circle.yml  dockerize  example.yaml  example.yml  namerd.sh  prom.yml  router.md
.circleci/: config.yml
.github/: CODEOWNERS
scripts/: rust-unmangle.sh
src/: admin.rs  app.rs  balancer.rs  config.rs  connection.rs  connector.rs  driver.rs  duplex.rs  lib.rs  main.rs  namerd.rs  path.rs  proxy_stream.rs  resolver.rs  router.rs  server.rs  servers_stream.rs  socket.rs  transfer.rs
src/app/: admin_http.rs  config.rs  mod.rs  sni.rs
src/balancer/: channelq.rs  dispatcher.rs  dispatchq.rs  endpoint.rs  endpoints.rs  factory.rs  manager.rs  mod.rs  selector.rs  task.rs  updater.rs
src/connection/: ctx.rs  duplex.rs  half_duplex.rs  mod.rs  secure.rs  socket.rs
src/connector/: config.rs  connecting.rs  mod.rs
src/lb/: balancer.rs  config.rs  connector.rs  dispatcher.rs  driver.rs  duplex.rs  endpoint.rs  factory.rs  manager.rs  mod.rs  pool.rs  proxy_stream.rs  selector.rs  shared.rs  socket.rs
src/mpmc/: mod.rs  receiver.rs  sender.rs  shared.rs
src/path/: mod.rs  parser.rs
src/pool/: mod.rs
src/resolver/: config.rs  mod.rs  namer.rs  namerd.rs
src/resolver/namer/: mod.rs  namerd.rs
src/server/: config.rs  mod.rs  serving.rs  sni.rs
tests/: lib.rs  test_bad_requests.rs
tests/mocks/: mock_namerd.rs  mock_webserver.rs  mod.rs
