[package]
name = "linkerd-tcp"
description = "A native TCP proxy for the linkerd service mesh"
version = "0.0.2"
authors = [
  "Oliver Gould <ver@buoyant.io>",
  "Steve Jenson <stevej@buoyant.io>",
]
homepage = "https://linkerd.io"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "linkerd-tcp"
doc = false

[dependencies]
bytes = "0.4"
clap = "2.20"
futures = "0.1"
# We use not-yet-released tokio integration on master:
hyper = { git = "https://github.com/hyperium/hyper", rev = "5a3743c1" }
log = "0.3"
rand = "0.3"
pretty_env_logger = "0.1"
rustls = "0.5"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_yaml = "0.6"
tacho = "0.2"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
url = "1.4"

[dev-dependencies]
env_logger = { version = "0.3", default-features = false }
futures = "0.1"
# We use not-yet-released tokio integration on master:
hyper = { git = "https://github.com/hyperium/hyper", rev = "5a3743c1" }
tokio-core = "0.1"
