[package]
name = "linkerd-tcp"
description = "A native TCP proxy for the linkerd service mesh"
version = "0.1.0"
authors = [
  "Oliver Gould <ver@buoyant.io>",
  "Steve Jenson <stevej@buoyant.io>",
]
homepage = "https://linkerd.io"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "linkerd-tcp"
doc = false

[dependencies]
bytes = "0.4"
clap = "2.24"
futures = "0.1"
# We use not-yet-released tokio integration on master:
hyper = { git = "https://github.com/hyperium/hyper", rev = "09fe9e6" }
log = "0.3"
ordermap = "0.2.10"
pretty_env_logger = "0.1"
rand = "0.3"
rustls = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
# tacho = { path = "../tacho" }
tacho = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
url = "1.4"
