[package]
name = "linkerd-tcp"
description = "A native TCP proxy for the linkerd service mesh"
version = "0.1.1"
authors = [
  "Oliver Gould <ver@buoyant.io>",
  "Steve Jenson <stevej@buoyant.io>",
]
homepage = "https://linkerd.io"
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "linkerd-tcp"
doc = false

[dependencies]
bytes = "0.4"
clap = "2.24"
futures = "0.1"
hyper = "0.11.15"
log = "0.3"
ordermap = "0.2"
pretty_env_logger = "0.1"
rand = "0.3"
rustls = { git = "https://github.com/briansmith/rustls", branch = "make_server_sni_public" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
# tacho = { path = "../tacho" }
tacho = "0.4.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
url = "1.4"
